<resources>
    <string name="app_name">Colocviu1_13</string>
    <string name="east_button">EAST</string>
    <string name="west_button">WEST</string>
    <string name="north_button">NORTH</string>
    <string name="south_button">SOUTH</string>
    <string name="north_east_south_west"></string>
    <string name="navigate_to_secondary_activity">NAVIGATE TO SECONDARY ACTIVITY</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
</resources>
